syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message OrderDTSValuationRequest {
    int32 RealEstateValuationId = 1;
}
