syntax = "proto3";
package DomainServices.UserService.v1;
option csharp_namespace = "DomainServices.UserService.Contracts.v1";

import "google/api/annotations.proto";
import "Messages/GetUser.proto";
import "Messages/User.proto";

service UserService {
   rpc GetUser(GetUserRequest) returns (User) {
	   option (google.api.http) = {
			get: "/v1/user"
		};
   }
}
